--- a/Serendipity/Base.lproj/Main.storyboard
+++ b/Serendipity/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5S-Ky-nbE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1071" y="566"/>
+            <point key="canvasLocation" x="276" y="872"/>
         </scene>
         <!--Signup View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -23,7 +23,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1071" y="-57"/>
+            <point key="canvasLocation" x="1033" y="232"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="d4d-05-BTY">
@@ -40,6 +40,59 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fR6-RZ-qMo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="664" y="232"/>
+        </scene>
+        <!--Discover-->
+        <scene sceneID="5fm-o7-1g2">
+            <objects>
+                <viewController storyboardIdentifier="Discover" id="brw-cx-YUO" customClass="DiscoverViewController" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="Discover" id="AFO-Ak-h5m">
+                        <barButtonItem key="leftBarButtonItem" title="Settings" id="0gg-2j-uMk">
+                            <connections>
+                                <action selector="showSettings:" destination="brw-cx-YUO" id="aG9-Jh-GkI"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Connections" id="uJ0-8m-Eyy">
+                            <connections>
+                                <action selector="showConnections:" destination="brw-cx-YUO" id="0VJ-yY-Ao7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TlQ-8h-TWe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="664" y="872"/>
+        </scene>
+        <!--Connections View Controller-->
+        <scene sceneID="mW7-zq-TQ3">
+            <objects>
+                <viewController storyboardIdentifier="Connections" id="YUi-xK-iJg" customClass="ConnectionsViewController" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y2Q-Pb-RU0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1033" y="872"/>
+        </scene>
+        <!--Chat View Controller-->
+        <scene sceneID="bLH-YZ-QSJ">
+            <objects>
+                <viewController storyboardIdentifier="Chat" id="rRd-ZO-60U" customClass="ChatViewController" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="B9f-P8-SG1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1399" y="872"/>
+        </scene>
+        <!--Edit Profile View Controller-->
+        <scene sceneID="98E-xT-5yo">
+            <objects>
+                <viewController storyboardIdentifier="EditProfile" id="Lqa-Xo-Tcw" customClass="EditProfileViewController" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WMP-6s-UTq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-104" y="872"/>
         </scene>
     </scenes>
 </document>
