--- a/Serendipity/User Interface/DiscoverView.xib
+++ b/Serendipity/User Interface/DiscoverView.xib
@@ -19,12 +19,18 @@
                     <state key="normal" title="Message">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="messageMatch:" destination="-1" eventType="touchUpInside" id="VwJ-Tk-u8H"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k1T-SM-LHr">
                     <rect key="frame" x="18" y="512" width="120" height="40"/>
                     <state key="normal" title="Next">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="nextMatch:" destination="-1" eventType="touchUpInside" id="Wi6-9q-FRl"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
