--- a/Serendipity/User Interface/ProfileView.xib
+++ b/Serendipity/User Interface/ProfileView.xib
@@ -7,6 +7,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileViewController">
             <connections>
+                <outlet property="aboutLabel" destination="Gur-zm-gdr" id="GZP-9V-Shf"/>
+                <outlet property="ageLabel" destination="sgg-KQ-lsf" id="Wd5-o4-d6v"/>
+                <outlet property="nameLabel" destination="yTD-bt-yNd" id="qBt-ZQ-Kbb"/>
                 <outlet property="pageControl" destination="zkL-na-OA5" id="ULz-Zp-2hL"/>
                 <outlet property="swipeView" destination="8A2-xC-PLX" id="jai-xp-Lkk"/>
                 <outlet property="view" destination="iN0-l3-epB" id="2dn-72-c7q"/>
@@ -31,23 +34,38 @@
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="zkL-na-OA5">
                     <rect key="frame" x="140" y="347" width="39" height="37"/>
                 </pageControl>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tony" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTD-bt-yNd" userLabel="Name">
-                    <rect key="frame" x="27" y="397" width="36" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anastasia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTD-bt-yNd" userLabel="Name">
+                    <rect key="frame" x="13" y="397" width="84.5" height="26"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="19"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="25" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgg-KQ-lsf" userLabel="Age">
-                    <rect key="frame" x="116" y="397" width="20" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgg-KQ-lsf" userLabel="Age">
+                    <rect key="frame" x="110" y="398.5" width="20" height="23.5"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gur-zm-gdr">
+                    <rect key="frame" x="13" y="431" width="299" height="106.5"/>
+                    <string key="text">I usually don't message people first, so if you're interested please message me! I'm not interested in hooking up, message me if you're curious about what I am looking for! 
+I'm a singer, dancer, figure skater, animal and nature lover. I work two jobs and attend dvc working towards a psychology major.</string>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="zkL-na-OA5" firstAttribute="centerX" secondItem="8A2-xC-PLX" secondAttribute="centerX" constant="-0.5" id="70f-SY-tph"/>
+                <constraint firstItem="sgg-KQ-lsf" firstAttribute="leading" secondItem="yTD-bt-yNd" secondAttribute="trailing" constant="13" id="9Xm-nu-caz"/>
+                <constraint firstAttribute="trailing" secondItem="Gur-zm-gdr" secondAttribute="trailing" constant="8" id="DKm-Se-bii"/>
+                <constraint firstItem="Gur-zm-gdr" firstAttribute="top" secondItem="yTD-bt-yNd" secondAttribute="bottom" constant="8.5" id="Rux-ip-ZUR"/>
                 <constraint firstItem="8A2-xC-PLX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="64" id="S9w-jN-rTo"/>
+                <constraint firstItem="yTD-bt-yNd" firstAttribute="centerY" secondItem="sgg-KQ-lsf" secondAttribute="centerY" id="Wid-OB-7Wt"/>
                 <constraint firstAttribute="trailing" secondItem="8A2-xC-PLX" secondAttribute="trailing" id="fZl-sZ-Td9"/>
                 <constraint firstItem="zkL-na-OA5" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="bottom" constant="-37" id="fdi-hA-QQ7"/>
+                <constraint firstItem="yTD-bt-yNd" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="bottom" constant="13" id="g1O-z4-CbG"/>
+                <constraint firstItem="Gur-zm-gdr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="jgS-XF-Jyl"/>
+                <constraint firstItem="yTD-bt-yNd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="r40-D1-7dM"/>
                 <constraint firstItem="8A2-xC-PLX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ykK-pk-1th"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
