--- a/Serendipity/User Interface/ProfileView.xib
+++ b/Serendipity/User Interface/ProfileView.xib
@@ -9,15 +9,18 @@
             <connections>
                 <outlet property="aboutLabel" destination="Gur-zm-gdr" id="GZP-9V-Shf"/>
                 <outlet property="ageLabel" destination="sgg-KQ-lsf" id="Wd5-o4-d6v"/>
+                <outlet property="locationLabel" destination="4Zn-fz-LIc" id="kce-HK-eRh"/>
                 <outlet property="nameLabel" destination="yTD-bt-yNd" id="qBt-ZQ-Kbb"/>
                 <outlet property="pageControl" destination="zkL-na-OA5" id="ULz-Zp-2hL"/>
+                <outlet property="schoolLabel" destination="fgR-Y6-HTQ" id="hIm-XR-I4U"/>
                 <outlet property="swipeView" destination="8A2-xC-PLX" id="jai-xp-Lkk"/>
                 <outlet property="view" destination="iN0-l3-epB" id="2dn-72-c7q"/>
+                <outlet property="workLabel" destination="xmG-4z-1gH" id="9Mp-EW-1g0"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="654"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8A2-xC-PLX" userLabel="Photos" customClass="SwipeView">
@@ -35,40 +38,93 @@
                     <rect key="frame" x="140" y="347" width="39" height="37"/>
                 </pageControl>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anastasia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTD-bt-yNd" userLabel="Name">
-                    <rect key="frame" x="13" y="397" width="84.5" height="26"/>
+                    <rect key="frame" x="13" y="393" width="84.5" height="26"/>
                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="19"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgg-KQ-lsf" userLabel="Age">
-                    <rect key="frame" x="110" y="398.5" width="20" height="23.5"/>
+                    <rect key="frame" x="110" y="394" width="20" height="23.5"/>
                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gur-zm-gdr">
-                    <rect key="frame" x="13" y="431" width="299" height="106.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="San Francisco, CA" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Zn-fz-LIc" userLabel="Location">
+                    <rect key="frame" x="36" y="427" width="94" height="13.5"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="11"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Facebook Inc." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xmG-4z-1gH" userLabel="Work">
+                    <rect key="frame" x="36" y="446" width="72.5" height="13.5"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="11"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stanford University" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgR-Y6-HTQ" userLabel="School">
+                    <rect key="frame" x="36" y="463" width="97" height="13.5"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="11"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gur-zm-gdr" userLabel="About">
+                    <rect key="frame" x="13" y="490" width="299" height="106.5"/>
                     <string key="text">I usually don't message people first, so if you're interested please message me! I'm not interested in hooking up, message me if you're curious about what I am looking for! 
 I'm a singer, dancer, figure skater, animal and nature lover. I work two jobs and attend dvc working towards a psychology major.</string>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_home" translatesAutoresizingMaskIntoConstraints="NO" id="ltE-Yd-rP5">
+                    <rect key="frame" x="13" y="427" width="15" height="14"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_work" translatesAutoresizingMaskIntoConstraints="NO" id="Gcp-lg-I7e">
+                    <rect key="frame" x="13" y="462" width="15" height="15"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="15" id="3zq-jO-eoG"/>
+                        <constraint firstAttribute="width" constant="15" id="EN8-I9-a1y"/>
+                    </constraints>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_school" translatesAutoresizingMaskIntoConstraints="NO" id="jXw-px-eYm">
+                    <rect key="frame" x="13" y="445" width="15" height="15"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="15" id="DcU-kn-cNg"/>
+                        <constraint firstAttribute="height" constant="15" id="xnW-ZI-R9G"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="fgR-Y6-HTQ" firstAttribute="leading" secondItem="xmG-4z-1gH" secondAttribute="leading" id="38r-nJ-vQY"/>
                 <constraint firstItem="zkL-na-OA5" firstAttribute="centerX" secondItem="8A2-xC-PLX" secondAttribute="centerX" constant="-0.5" id="70f-SY-tph"/>
+                <constraint firstItem="4Zn-fz-LIc" firstAttribute="leading" secondItem="ltE-Yd-rP5" secondAttribute="trailing" constant="8" id="71G-Mx-NyL"/>
                 <constraint firstItem="sgg-KQ-lsf" firstAttribute="leading" secondItem="yTD-bt-yNd" secondAttribute="trailing" constant="13" id="9Xm-nu-caz"/>
+                <constraint firstItem="ltE-Yd-rP5" firstAttribute="leading" secondItem="yTD-bt-yNd" secondAttribute="leading" id="AS5-9m-AYk"/>
                 <constraint firstAttribute="trailing" secondItem="Gur-zm-gdr" secondAttribute="trailing" constant="8" id="DKm-Se-bii"/>
-                <constraint firstItem="Gur-zm-gdr" firstAttribute="top" secondItem="yTD-bt-yNd" secondAttribute="bottom" constant="8.5" id="Rux-ip-ZUR"/>
+                <constraint firstItem="ltE-Yd-rP5" firstAttribute="leading" secondItem="jXw-px-eYm" secondAttribute="leading" id="Fg9-E5-hom"/>
                 <constraint firstItem="8A2-xC-PLX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="64" id="S9w-jN-rTo"/>
                 <constraint firstItem="yTD-bt-yNd" firstAttribute="centerY" secondItem="sgg-KQ-lsf" secondAttribute="centerY" id="Wid-OB-7Wt"/>
+                <constraint firstItem="4Zn-fz-LIc" firstAttribute="leading" secondItem="xmG-4z-1gH" secondAttribute="leading" id="ea6-NY-KcR"/>
+                <constraint firstItem="ltE-Yd-rP5" firstAttribute="top" secondItem="yTD-bt-yNd" secondAttribute="bottom" constant="8" id="efO-7v-ISy"/>
                 <constraint firstAttribute="trailing" secondItem="8A2-xC-PLX" secondAttribute="trailing" id="fZl-sZ-Td9"/>
                 <constraint firstItem="zkL-na-OA5" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="bottom" constant="-37" id="fdi-hA-QQ7"/>
-                <constraint firstItem="yTD-bt-yNd" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="bottom" constant="13" id="g1O-z4-CbG"/>
+                <constraint firstItem="jXw-px-eYm" firstAttribute="top" secondItem="ltE-Yd-rP5" secondAttribute="bottom" constant="4" id="fle-6f-eq5"/>
+                <constraint firstItem="yTD-bt-yNd" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="bottom" constant="9" id="g1O-z4-CbG"/>
+                <constraint firstItem="jXw-px-eYm" firstAttribute="leading" secondItem="Gcp-lg-I7e" secondAttribute="leading" id="gKi-0Z-PXZ"/>
+                <constraint firstItem="fgR-Y6-HTQ" firstAttribute="centerY" secondItem="Gcp-lg-I7e" secondAttribute="centerY" id="h9i-z2-tO2"/>
                 <constraint firstItem="Gur-zm-gdr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="jgS-XF-Jyl"/>
+                <constraint firstItem="Gur-zm-gdr" firstAttribute="top" secondItem="Gcp-lg-I7e" secondAttribute="bottom" constant="13" id="k1I-HC-tq3"/>
                 <constraint firstItem="yTD-bt-yNd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="r40-D1-7dM"/>
+                <constraint firstItem="jXw-px-eYm" firstAttribute="centerY" secondItem="xmG-4z-1gH" secondAttribute="centerY" id="v7d-cy-Isx"/>
+                <constraint firstItem="Gcp-lg-I7e" firstAttribute="top" secondItem="jXw-px-eYm" secondAttribute="bottom" constant="2" id="vgd-WO-dne"/>
+                <constraint firstItem="4Zn-fz-LIc" firstAttribute="centerY" secondItem="ltE-Yd-rP5" secondAttribute="centerY" id="wWZ-Mm-PSG"/>
                 <constraint firstItem="8A2-xC-PLX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ykK-pk-1th"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="432" y="551"/>
         </view>
     </objects>
+    <resources>
+        <image name="ic_home" width="15" height="14"/>
+        <image name="ic_school" width="15" height="9"/>
+        <image name="ic_work" width="15" height="12"/>
+    </resources>
 </document>
