--- a/Serendipity/User Interface/Profile/ProfileView.xib
+++ b/Serendipity/User Interface/Profile/ProfileView.xib
@@ -43,7 +43,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgg-KQ-lsf" userLabel="Age">
-                    <rect key="frame" x="110" y="394" width="20" height="24"/>
+                    <rect key="frame" x="111" y="394" width="20" height="24"/>
                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -76,14 +76,14 @@ I'm a singer, dancer, figure skater, animal and nature lover. I work two jobs an
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_home" translatesAutoresizingMaskIntoConstraints="NO" id="ltE-Yd-rP5">
                     <rect key="frame" x="13" y="427" width="15" height="14"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_work" translatesAutoresizingMaskIntoConstraints="NO" id="Gcp-lg-I7e">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_school" translatesAutoresizingMaskIntoConstraints="NO" id="Gcp-lg-I7e">
                     <rect key="frame" x="13" y="462" width="15" height="15"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="3zq-jO-eoG"/>
                         <constraint firstAttribute="width" constant="15" id="EN8-I9-a1y"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_school" translatesAutoresizingMaskIntoConstraints="NO" id="jXw-px-eYm">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_work" translatesAutoresizingMaskIntoConstraints="NO" id="jXw-px-eYm">
                     <rect key="frame" x="13" y="445" width="15" height="15"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="15" id="DcU-kn-cNg"/>
