Transition settings view to profile view to edit profile view https://app.asana.com/0/25687426255649/26309044037608

--- a/Serendipity/Base.lproj/Main.storyboard
+++ b/Serendipity/Base.lproj/Main.storyboard
@@ -4,16 +4,23 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
     </dependencies>
     <scenes>
-        <!--Profile View Controller-->
+        <!--My Profile-->
         <scene sceneID="eia-8N-UZ9">
             <objects>
                 <viewController storyboardIdentifier="Profile" id="bQv-dO-auU" customClass="ProfileViewController" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="My Profile" id="vUc-qU-qhl">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="fxU-ar-kdx">
+                            <connections>
+                                <segue destination="Lqa-Xo-Tcw" kind="show" id="Q7K-Wx-pjZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5S-Ky-nbE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-104" y="872"/>
+            <point key="canvasLocation" x="-68" y="1592"/>
         </scene>
         <!--Signup View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -24,7 +31,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1033" y="232"/>
+            <point key="canvasLocation" x="288" y="872"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="d4d-05-BTY">
@@ -40,7 +47,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fR6-RZ-qMo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="664" y="232"/>
+            <point key="canvasLocation" x="463" y="212"/>
         </scene>
         <!--Discover-->
         <scene sceneID="5fm-o7-1g2">
@@ -82,7 +89,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y2Q-Pb-RU0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1033" y="872"/>
+            <point key="canvasLocation" x="1053" y="1592"/>
         </scene>
         <!--Chat View Controller-->
         <scene sceneID="bLH-YZ-QSJ">
@@ -93,7 +100,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B9f-P8-SG1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1399" y="872"/>
+            <point key="canvasLocation" x="1419" y="1592"/>
         </scene>
         <!--Video Recorder View Controller-->
         <scene sceneID="Eyk-Cd-rkc">
@@ -103,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4iI-Tj-bCf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1782" y="872"/>
+            <point key="canvasLocation" x="1802" y="1592"/>
         </scene>
         <!--Edit Profile View Controller-->
         <scene sceneID="98E-xT-5yo">
@@ -114,7 +121,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WMP-6s-UTq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-484" y="872"/>
+            <point key="canvasLocation" x="-448" y="1592"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="6E1-Ce-dgY">
@@ -122,10 +129,13 @@
                 <viewController storyboardIdentifier="Settings" id="Vhy-hq-gwn" customClass="SettingsViewController" sceneMemberID="viewController">
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <segue destination="bQv-dO-auU" kind="show" identifier="SettingsToProfile" id="wnv-o0-kZH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zfc-Bp-zvE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="276" y="872"/>
+            <point key="canvasLocation" x="312" y="1592"/>
         </scene>
     </scenes>
 </document>
