--- a/Serendipity/User Interface/Profile/EditProfileView.xib
+++ b/Serendipity/User Interface/Profile/EditProfileView.xib
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditProfileViewController">
             <connections>
+                <outlet property="aboutField" destination="oNq-6l-b81" id="De5-Ma-bdl"/>
+                <outlet property="collectionView" destination="xXi-zz-Pdl" id="C6n-N1-O3i"/>
                 <outlet property="view" destination="iN0-l3-epB" id="K7O-w9-zO2"/>
             </connections>
         </placeholder>
@@ -13,8 +16,50 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xXi-zz-Pdl">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                    <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="xXi-zz-Pdl" secondAttribute="height" multiplier="1:1" id="eWK-qb-ciS"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5D2-Gl-H7r">
+                        <size key="itemSize" width="85" height="85"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="20" minY="25" maxX="20" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Me" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JOi-al-ery">
+                    <rect key="frame" x="21" y="328" width="75" height="21"/>
+                    <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oNq-6l-b81">
+                    <rect key="frame" x="8" y="357" width="304" height="203"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="203" id="hg1-ER-J81"/>
+                    </constraints>
+                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
+            </subviews>
+            <color key="backgroundColor" white="0.94537290592783507" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="xXi-zz-Pdl" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="0oW-5u-Jmu"/>
+                <constraint firstAttribute="trailing" secondItem="oNq-6l-b81" secondAttribute="trailing" constant="8" id="Cma-7S-XR5"/>
+                <constraint firstAttribute="bottom" secondItem="oNq-6l-b81" secondAttribute="bottom" constant="8" id="Eky-oY-dSo"/>
+                <constraint firstItem="JOi-al-ery" firstAttribute="leading" secondItem="oNq-6l-b81" secondAttribute="leading" constant="13" id="Qvo-5E-llF"/>
+                <constraint firstItem="oNq-6l-b81" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="RZ7-ZP-ulS"/>
+                <constraint firstItem="oNq-6l-b81" firstAttribute="top" secondItem="JOi-al-ery" secondAttribute="bottom" constant="8" id="WbF-sC-Bev"/>
+                <constraint firstAttribute="trailing" secondItem="xXi-zz-Pdl" secondAttribute="trailing" id="Xdb-gm-4f1"/>
+                <constraint firstItem="xXi-zz-Pdl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="tGy-af-ANp"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
 </document>
