--- a/Serendipity/User Interface/Chat/StorylineView.xib
+++ b/Serendipity/User Interface/Chat/StorylineView.xib
@@ -13,13 +13,14 @@
         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" id="t3Y-yb-92W">
             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <color key="backgroundColor" red="0.95215992650000003" green="0.95215992650000003" blue="0.95215992650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="k5g-Io-nME">
-                <size key="itemSize" width="90" height="90"/>
+                <size key="itemSize" width="80" height="80"/>
                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                <inset key="sectionInset" minX="5" minY="5" maxX="0.0" maxY="5"/>
             </collectionViewFlowLayout>
             <point key="canvasLocation" x="232" y="542"/>
         </collectionView>
